dark mode added (complete)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                         <div class="clock__hour" id="clock__hour"></div>
                         <div class="clock__minutes" id="clock__minutes"></div>
                         <div class="clock__seconds" id="clock__seconds"></div>
+
+                        <div class="clock__theme">
+                            <i class="bx bxs-moon" id="theme-button"></i>
+                        </div>
                     </div>
 
                     <div>
